--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
 @import url("https://fonts.googleapis.com/css?family=Metal+Mania");
-
 @font-face {
     font-family: "Booter - Zero Zero";
-    src: url("Fonts/Booter - Zero Zero.woff") format("woff"),
-         url("Fonts/Booter - Zero Zero.woff2") format("woff2");
+    src: url("Fonts/Booter - Zero Zero.woff") format("woff"), url("Fonts/Booter - Zero Zero.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
 }
@@ -43,7 +41,6 @@ html, body {
     border-bottom: 1px solid rgba(255, 255, 255, .3)
 }
 
-
 .main-nav li {
     padding: 0 5%;
 }
@@ -59,11 +56,14 @@ html, body {
     background-size: cover;
     padding-bottom: 30px;
 }
-.bi{
-margin: 0 10px 0 10px;
-color: red !important ;
+
+.bi {
+    margin: 0 10px 0 10px;
 }
 
+.liked {
+    fill:red;
+}
 .band-name {
     text-align: center;
     margin: 0;
@@ -86,6 +86,7 @@ color: red !important ;
     margin: 0 auto;
     padding: 0 1.5em;
 }
+
 .section-header {
     font-family: "Metal Mania";
     font-weight: normal;
